dev/test_programs/INVALID/group12/scan_parse_errors/lvalue_error3.go
// x*y is not a lvalue

package main;

func main() {
	var x,y int
	x*y = 5
	if x>2 {
		print()
	}

}